<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/sec_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <TextView
                android:id="@+id/text_up_title"
                fontPath="myfonts/Poppins-SemiBold_0.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/welcome_back"
                android:textColor="@color/white_light"
                android:textSize="26sp"
                tools:ignore="MissingPrefix" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_into_continue"
                android:textColor="@color/gray"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/app_name"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:src="@drawable/ic_user" />


                <EditText
                    android:id="@+id/editText_email_login_activity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="#00000000"
                    android:focusable="true"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColor="@color/white_light"
                    android:textColorHint="@color/white_light"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="16sp" />

            </LinearLayout>

            <include
                layout="@layout/login_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/app_name"
                    android:paddingTop="8dp"
                    android:paddingBottom="12dp"
                    android:src="@drawable/ic_password" />

                <EditText
                    android:id="@+id/editText_password_login_activity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="#00000000"
                    android:hint="@string/password_login"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/white_light"
                    android:textColorHint="@color/white_light"
                    android:textCursorDrawable="@drawable/cursor"
                    android:textSize="16sp" />

            </LinearLayout>

            <include
                layout="@layout/login_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <cn.refactor.library.SmoothCheckBox
                    android:id="@+id/checkbox_login_activity"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    app:color_checked="@color/colorPrimary" />

                <TextView
                    android:id="@+id/text_reme_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="@string/remember_me"
                    android:textColor="@color/white_light"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-6dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:theme="@style/WhiteCheck" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textSignUpAccept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/sign_in_accept"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:weightSum="2">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_login_activity"
                    fontPath="myfonts/Poppins-SemiBold_0.ttf"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_gradient"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:backgroundTint="@null"
                    tools:ignore="MissingPrefix" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_skip_login_activity"
                    fontPath="myfonts/Poppins-SemiBold_0.ttf"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_login_skip_background"
                    android:text="@string/skip"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:backgroundTint="@null"
                    tools:ignore="MissingPrefix" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/linearLayout_google_login"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_google_bg"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/google_ic" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:text="@string/gmail"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <FrameLayout
                    android:id="@+id/frameLayout_login"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/button_fb_bg"
                    android:padding="3dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/facebook_ic" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="5dp"
                            android:text="@string/facebook"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </FrameLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView_forget_password_login"
                fontPath="myfonts/Poppins-SemiBold_0.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/white_light"
                android:textSize="16sp"
                tools:ignore="MissingPrefix" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/sec_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_acc"
                fontPath="myfonts/Poppins-SemiBold_0.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:textColor="@color/white_light"
                android:textStyle="bold"
                tools:ignore="MissingPrefix" />

            <TextView
                android:id="@+id/textView_signup_login"
                fontPath="myfonts/Poppins-SemiBold_0.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                tools:ignore="MissingPrefix" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="50dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary" />

            <View
                android:layout_width="50dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark" />
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>