<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#85000000">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="4dp"
        card_view:cardUseCompatPadding="false"
        card_view:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/review_header_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/rating"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/image_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:src="@drawable/d_close" />

            </RelativeLayout>

            <com.github.ornolfr.ratingview.RatingView
                android:id="@+id/ratingView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                app:drawable_empty="@drawable/ic_star_empty"
                app:drawable_filled="@drawable/ic_star_filled"
                app:drawable_half="@drawable/ic_star_half"
                app:drawable_margin="2dp"
                app:drawable_size="40dp"
                app:is_indicator="false"
                app:max_count="5" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_name_edit"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/write_here"
                android:textColorHint="@color/textView_hint_editPro"
                app:boxStrokeColor="@color/textView_box_select_color"
                app:hintTextColor="@color/textView_hint_layout_editPro">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:maxLines="4"
                    android:minLines="4"
                    android:textColor="@color/textView_editPro"
                    android:theme="@style/editText_style" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_gradient"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                app:backgroundTint="@null" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>